Collect Stream Items in Unmodifiable List for Threat Safety
Signed-off-by: Sven Strittmatter <sven.strittmatter@iteratec.com>